<resources>
    <string name="app_name">rbtv</string>
    <string name="F1_films_and_shows">F1 Films &amp; Shows</string>
    <string name="about">About</string>
    <string name="about_to_start">About to Start</string>
    <string name="accept">Accept</string>
    <string name="accept_all">Accept All</string>
    <string name="account">Account</string>
    <string name="account_card_subtitle_part1">Already have an account?</string>
    <string name="account_card_title">Wouldn\'t it be nice to download videos and watch them without internet?</string>
    <string name="account_code">Enter this code when prompted. You must have both devices connected to the internet to activate.</string>
    <string name="account_conditions">By continuing, I agree to the Terms of Use &amp; Privacy Policy.</string>
    <string name="account_create">Create an account to save favorites and download videos to watch anytime you want.</string>
    <string name="account_cta">Sign in to get the most of Red\u00a0Bull</string>
    <string name="account_description_signin">Sign in to save favorites and download videos to watch anytime you want.</string>
    <string name="account_favorite_add_error">There was a problem adding your favorite. Please try again later.</string>
    <string name="account_favorite_remove_error">There was a problem removing your favorite. Please try again later.</string>
    <string name="account_logged_out_description">Create an account to save all your favorites and watch them later. Visit the address below and enter the activation code when prompted.</string>
    <string name="account_logged_out_qr_description">Enter the code below when prompted. You must have both devices connected to the internet to activate. This code will be valid for %1$s</string>
    <string name="account_logged_out_qr_header">Scan the code above with your device\'s camera for auto-activation</string>
    <string name="account_logged_out_subtext">You must have both devices connected to the internet to activate. This code will reload after 15 minutes.</string>
    <string name="account_qr_code_help">Scan the code above with your mobile device. Or visit the address below and enter the activation code.</string>
    <string name="account_scan_code">Scan the code above with your device or visit redbull.com/activate</string>
    <string name="account_sign_up_title">One account for the whole World of Red\u00a0Bull</string>
    <string name="account_subheader">Create an account to save all your favorites and watch them later</string>
    <string name="account_token_error">Error retrieving login token. Please try again later.</string>
    <string name="account_value_prop_1">Save your favorites</string>
    <string name="account_value_prop_2">Personalize your watch experience</string>
    <string name="account_value_prop_3">Watch across all your devices</string>
    <string name="accounts">Accounts</string>
    <string name="action_reel">Action Reel</string>
    <string name="action_sport_films">Action Sport Films</string>
    <string name="ad_text_single">Ad %1$s</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="added_to_favorites">Added to your Favorites</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="adventure">Adventure</string>
    <string name="adventure_films">Adventure Films</string>
    <string name="adventure_shows">Adventure Shows</string>
    <string name="after_the_raves">After the Raves</string>
    <string name="aired_on_date">Aired on %1$s</string>
    <string name="all_adventure_films">All Adventure Films</string>
    <string name="all_adventure_shows">All Adventure Shows</string>
    <string name="all_channels">All Channels</string>
    <string name="all_dance_events">All Dance Events</string>
    <string name="all_events">All Events</string>
    <string name="all_films">All Films</string>
    <string name="all_gaming_films_and_shows">All Gaming Films &amp; Shows</string>
    <string name="all_motor_films">All Motor Films</string>
    <string name="all_motor_shows">All Motor Shows</string>
    <string name="all_shows">All Shows</string>
    <string name="all_skate_films">All Skate Films</string>
    <string name="all_skate_shows">All Skate Shows</string>
    <string name="all_snow_films">All Snow Films</string>
    <string name="all_snow_shows">All Snow Shows</string>
    <string name="all_surf_films">All Surf Films</string>
    <string name="all_surf_shows">All Surf Shows</string>
    <string name="allow">Allow</string>
    <string name="allow_access_to_email">You must allow access to your email to log in.</string>
    <string name="app_settings">App Settings</string>
    <string name="app_version">App Version</string>
    <string name="ar_camera">AR Camera</string>
    <string name="ar_list_empty_msg">Sorry, there are no AR experiences available at the moment</string>
    <string name="ar_menu_subtitle">Choose an item to see it in AR</string>
    <string name="ar_menu_title">Augmented Reality</string>
    <string name="ar_not_supported">Sorry, Red\u00a0Bull AR is not available on this device</string>
    <string name="ar_plus">AR+</string>
    <string name="ar_rb_rampage">Red\u00a0Bull Rampage</string>
    <string name="ar_rb_rampage_callout">Red\u00a0Bull Rampage AR</string>
    <string name="ar_rb_rampage_callout_description">Experience Rampage in Augmented Reality through the lens of your device.</string>
    <string name="audio">Audio</string>
    <string name="audio_and_language">Audio &amp; Language</string>
    <string name="audio_language">Audio Language</string>
    <string name="audio_settings_roku">Please press * to use system settings for audio track selection.</string>
    <string name="auto">Auto</string>
    <string name="available">Available</string>
    <string name="awaiting_replay">Awaiting Replay</string>
    <string name="back">Back</string>
    <string name="best_of_b_girls">Best of B-Girls</string>
    <string name="best_of_dance">Best of Dance</string>
    <string name="best_of_red_bull">WORLD OF RED BULL</string>
    <string name="best_of_sailing">Best of Sailing</string>
    <string name="best_trick_and_bloopers">Best Trick and Bloopers</string>
    <string name="beta">Beta</string>
    <string name="bike_films">Bike Films</string>
    <string name="bike_shows">Bike Shows</string>
    <string name="blocked_authentication">Blocked Authentication</string>
    <string name="blocked_awaiting_permission">Blocked Awaiting Permission</string>
    <string name="blocked_battery">Blocked Battery</string>
    <string name="blocked_cell">Blocked Cell</string>
    <string name="blocked_error_http">Blocked Error Http</string>
    <string name="blocked_headroom">Blocked Headroom</string>
    <string name="blocked_network">Blocked Network</string>
    <string name="blocked_storage">Blocked Storage</string>
    <string name="browse">Browse</string>
    <string name="browse_videos">Browse Videos</string>
    <string name="camera_app_settings_button">App Settings</string>
    <string name="camera_permission_denied_msg">The AR Experience requires the use of your camera. You have requested that we should no longer ask for your camera permission. You can change this by going to your App Settings.</string>
    <string name="camera_permission_request_msg">The AR Experience requires the use of your camera.</string>
    <string name="camera_permission_request_title">Red\u00a0Bull TV needs camera access</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_reminder">Cancel reminder</string>
    <string name="cancel_selection">Ok, Cancel Selection</string>
    <string name="canceled">Canceled</string>
    <string name="canceled_live_events">Canceled Live Events</string>
    <string name="caption_language">Subtitle Language</string>
    <string name="captions_background">Background</string>
    <string name="captions_casual">Casual</string>
    <string name="captions_color">Color</string>
    <string name="captions_cursive">Cursive</string>
    <string name="captions_custom_style">Custom Style</string>
    <string name="captions_default">Default</string>
    <string name="captions_depressed">Depressed</string>
    <string name="captions_drop_shadow">Drop Shadow</string>
    <string name="captions_edge_style">Edge Style</string>
    <string name="captions_flashing">flashing</string>
    <string name="captions_font">Font</string>
    <string name="captions_large">Large</string>
    <string name="captions_medium">Medium</string>
    <string name="captions_monospace_sans_serif">Monospace Sans-Serif</string>
    <string name="captions_monospace_serif">Monospace Serif</string>
    <string name="captions_no_edge">No Edge</string>
    <string name="captions_opacity">Opacity</string>
    <string name="captions_raised">Raised</string>
    <string name="captions_sans_serif">Sans-Serif</string>
    <string name="captions_serif">Serif</string>
    <string name="captions_size">Size</string>
    <string name="captions_small">Small</string>
    <string name="captions_small_capitals">Small Capitals</string>
    <string name="captions_solid">solid</string>
    <string name="captions_text">Text</string>
    <string name="captions_translucent">translucent</string>
    <string name="captions_transparent">transparent</string>
    <string name="captions_uniform">Uniform</string>
    <string name="captions_use_setting_from_video">Use the %1$s specified in the video.</string>
    <string name="captions_video_overrides_style">video overrides style</string>
    <string name="captions_window">Window</string>
    <string name="cast">Cast</string>
    <string name="cast_added_to_queue_fail">Failed to add video to Queue</string>
    <string name="cast_buffering">Buffering…</string>
    <string name="cast_connecting">Connecting to cast…</string>
    <string name="cast_connecting_minimized">Connecting…</string>
    <string name="cast_failed_no_connection">No connection to the cast device is present</string>
    <string name="cast_failed_no_connection_trans">Connection to the cast device has been lost. Application is trying to re-establish the connection, if possible. Please wait for a few seconds and try again.</string>
    <string name="cast_failed_perform_action">Failed to perform the action</string>
    <string name="cast_generic_play_error">Failed to Cast video</string>
    <string name="cast_ios">To Cast, select \"OK\" when the app asks to connect to your local network. You can also allow this later in iOS Settings for this app.</string>
    <string name="cast_loading">Loading…</string>
    <string name="cast_local_network">The local network is used to discover Cast-enabled devices on your WiFi network</string>
    <string name="cast_microphone">Google Cast would like to use the microphone.</string>
    <string name="cast_network_access">Red\u00a0Bull TV needs Local Network Access to Cast</string>
    <string name="cast_queue_empty_message">To cast from your Queue add items to your Queue.</string>
    <string name="cast_queue_empty_title">Your TV Queue is Empty</string>
    <string name="cast_wifi_network">To connect your devices, Red\u00a0Bull TV needs access to your Wi-Fi network.</string>
    <string name="change_settings">Change Settings</string>
    <string name="channel">Channel</string>
    <string name="channel_sync_complete">Channel Sync Complete</string>
    <string name="clear_queue">Clear Queue</string>
    <string name="clear_search">Clear Search</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="tab_home">Home</string>
    <string name="tab_browse">Browse</string>
    <string name="tab_channels">Channels</string>
    <string name="tab_events">Events</string>
    <string name="tab_account">Account</string>
</resources>