<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/browse_fragment"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:title="@string/tab_browse" />

    <item
        android:id="@+id/channels_fragment"
        android:icon="@drawable/ic_tv_24"
        android:title="@string/tab_channels" />

    <item
        android:id="@+id/events_fragment"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/tab_events" />

    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/tab_account" />

</menu>